# SpotifyVisualizer

./: .cache  README.md  api call.py  app.py  call.py  config.py  dashboard-playground.py  dashboard.py  index.py  models.py  pyproject.toml  resources.py  routes.py  spotifyTracks.py  test.py
User stories/: Story_3.txt  Story_4.txt  Story_One.txt
instance/: database.db
templates/: home_page.html
