[tool.poetry]
name = "spotifyvisualizer"
version = "0.1.0"
description = ""
authors = ["michaelfigelman <mfigelman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"
flask-restful = "^0.3.10"
requests = "^2.31.0"
flask-sqlalchemy = "^3.1.1"
spotipy = "^2.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
