[tool.poetry]
name = "spotifyvisualizer"
version = "0.1.0"
description = ""
authors = ["michaelfigelman <mfigelman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
Flask = "^2.0.0"
flask-restful = "^0.3.10"
requests = "^2.31.0"
flask-sqlalchemy = "^3.1.1"
spotipy = "^2.23.0"
jsonify = "^0.5"
dash = "^2.13.0"
pandas = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
